corrections to MA.

--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -137,13 +137,13 @@ This is a law that’s venerable.
 
 “The king answered the crowd, ‘This prince is intelligent. He’s sure to understand my words.’
 
-38\. “It was then that Prince Dīrghajāti implored the well-to-do families of Bārāṇasī, ‘Gentlemen, practice generosity and cultivate merit in order to chant this invocation for Dīrghāyu, the king of Kośala: ‘With this gift of merit, may King Dīrghāyu be granted well-being and gain his freedom!’
+38\. “It was then that Prince Dīrghajāti implored the well-to-do families of Bārāṇasī, ‘Gentlemen, practice generosity and cultivate merit in order to chant this invocation for Dīrghāyu, the king of Kośala: “With this gift of merit, may King Dīrghāyu be granted well-being and gain his freedom!”’
 {: #p38}
 
 39\. “The well-to-do families in Bārāṇasī who were implored by Prince Dīrghajāti then practiced generosity and cultivated merit in order to chant this invocation for Dīrghāyu, the king of Kośala: ‘With this gift of merit, may King Dīrghāyu be granted well-being and gain his freedom!’
 {: #p39}
 
-40\. “King Brahmadatta heard: ‘The well-to-do families in Bārāṇasī are practicing generosity and cultivating merit in order to chant this invocation for Dīrghāyu, the king of Kośala: ‘With this gift of merit, may King Dīrghāyu be granted well-being and gain his freedom!’
+40\. “King Brahmadatta heard: ‘The well-to-do families in Bārāṇasī are practicing generosity and cultivating merit in order to chant this invocation for Dīrghāyu, the king of Kośala: “With this gift of merit, may King Dīrghāyu be granted well-being and gain his freedom!”’
 {: #p40}
 
 41\. “Hearing this, he was so frightened that his hair stood on end. ‘I can’t allow these well-to-do families of Bārāṇasī turn against me! If that’s the case, it would be best to act swiftly and put an end to this before they do.’ King Brahmadatta thereupon ordered everyone to his left and right, ‘Quickly! Go kill Dīrghāyu, the king of Kośala, and chop him into seven pieces.’ Everyone to his left and right accepted his instructions. They went quickly, killed King Dīrghāyu, and chopped him into seven pieces.
@@ -188,13 +188,13 @@ This is a law that’s venerable.
 54\. “Dīrghajāti the Scholar then had this thought, ‘This King Brahmadatta is violent and unprincipled. He took my father who was an innocent man. He captured his kingdom, storehouses, and treasures and killed him with hateful cruelty. He was chopped into seven pieces! But on this day, it’s in my hands. It’s up to me to repay him for his hate.’ After thinking this, Dīrghajāti the Scholar drew his sharp sword and placed it on King Brahmadatta’s neck. He said, ‘Now, I’m going to kill you! Now, I’m going kill you!’
 {: #p54}
 
-55\. “Dīrghajāti the Scholar again thought, ‘I’m not going to do this. Why is that? I remember that day when my father was under the sign, and the end was near. He said to me, ‘Be tolerant, Prince! Be tolerant! Don’t bind yourself with hate! Only act with kindness!’ After remembering this, he lifted his sword and put it back in its sheath.
+55\. “Dīrghajāti the Scholar again thought, ‘I’m not going to do this. Why is that? I remember that day when my father was under the sign, and the end was near. He said to me, “Be tolerant, Prince! Be tolerant! Don’t bind yourself with hate! Only act with kindness!”’ After remembering this, he lifted his sword and put it back in its sheath.
 {: #p55}
 
 56\. “King Brahmadatta was then dreaming, and he saw King Dīrghāyu’s son Prince Dīrghajāti holding a drawn sword to his neck, saying, ‘Now, I’m going to kill you! Now, I’m going kill you!’ After seeing this, he was so terrified that his hair stood on end. He woke up suddenly and said to Dīrghajāti the Scholar, ‘Now, you should know that in a dream I saw King Dīrghāyu’s son Prince Dīrghajāti holding a drawn sword to my neck, saying, “Now, I’m going to kill you! Now, I’m going kill you!”’
 {: #p56}
 
-57\. “After hearing this, Dīrghajāti the Scholar said, ‘Fear not, Heavenly King! Fear not! Why is that? I am King Dīrghāyu’s son Prince Dīrghajāti. Heavenly King, I had the thought, “This King Brahmadatta is violent and unprincipled. He took my father who was an innocent man. He captured his kingdom, storehouses, and treasures and killed him with hateful cruelty. He was chopped into seven pieces! But on this day, it’s in my hands. It’s up to me to repay him for his hate.” Heavenly King, I drew my sword, put it on your neck, and said, “Now, I’m going to kill you! Now, I’m going kill you!” But, Heavenly King, I again thought, “I’m not going to do this. Why is that? I remember that day when my father was under the sign, and the end was near. He said to me, ‘Be tolerant, Prince! Be tolerant! Don’t bind yourself with hate! Only act with kindness!” After remembering that, I lifted my sword and put it back in its sheath.’
+57\. “After hearing this, Dīrghajāti the Scholar said, ‘Fear not, Heavenly King! Fear not! Why is that? I am King Dīrghāyu’s son Prince Dīrghajāti. Heavenly King, I had the thought, “This King Brahmadatta is violent and unprincipled. He took my father who was an innocent man. He captured his kingdom, storehouses, and treasures and killed him with hateful cruelty. He was chopped into seven pieces! But on this day, it’s in my hands. It’s up to me to repay him for his hate.” Heavenly King, I drew my sword, put it on your neck, and said, “Now, I’m going to kill you! Now, I’m going kill you!” But, Heavenly King, I again thought, “I’m not going to do this. Why is that? I remember that day when my father was under the sign, and the end was near. He said to me, ‘Be tolerant, Prince! Be tolerant! Don’t bind yourself with hate! Only act with kindness!’” After remembering that, I lifted my sword and put it back in its sheath.’
 {: #p57}
 
 58\. “King Brahmadatta said, ‘Prince, you said, “Be tolerant, Prince! Be tolerant!” I understand the meaning of that. But you also said, “Don’t bind yourself with hate! Act only with kindness!” What does that mean?’
@@ -255,7 +255,7 @@ Can be controlled and unified;
 If you consider the true meaning,  
 Surely the bonds of hate will be ended.
 
-* {:.verse #v6} “If you stop disputes with disputes,  
+* {:.verse #v6} If you stop disputes with disputes,  
 There won’t ever be an end to them.  
 Only tolerance can stop disputes;  
 This is a law that’s venerable.
@@ -387,7 +387,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 95\. The Bhagavān praised them. “Good, good! In this way, Aniruddha, all of you are always unified together, contented without disputes, single in mind and single in teacher, and joined as one like water and milk. But have you attained the state of the superior man and a distinct and contented dwelling?”
 {: #p95}
 
-96\. Venerable Aniruddha said, “In thus way, Bhagavān, we are always united together, contented without disputes, single in mind and single in teacher, and joined as one like water and milk. We’ve attained the state of the superior man and have a distinct and contented dwelling. Bhagavān, we apprehend light and then see forms, but those visions of forms and light soon disappear again.”
+96\. Venerable Aniruddha said, “In this way, Bhagavān, we are always united together, contented without disputes, single in mind and single in teacher, and joined as one like water and milk. We’ve attained the state of the superior man and have a distinct and contented dwelling. Bhagavān, we apprehend light and then see forms, but those visions of forms and light soon disappear again.”
 {: #p96}
 
 97\. The Bhagavān told him, “Aniruddha, none of you have comprehended these signs, which is to say the signs of apprehending light and seeing forms, and so that vision of forms and light soon disappears again.
@@ -544,7 +544,7 @@ Venerable Kimbila said, “Bhagavān, I am doing well. There isn’t anything th
 
 #### 1. Samādhi with Perception and Examination
 
-140\. If I cultivated the samādhi with perception and examination, my mind would be liable to turn to the samādhi with no perception and some examination. Thus, I surely wouldn’t lose this knowledge and vision.
+140\. “If I cultivated the samādhi with perception and examination, my mind would be liable to turn to the samādhi with no perception and some examination. Thus, I surely wouldn’t lose this knowledge and vision.
 {: #p140}
 
 141\. “Aniruddha, after knowing it in this way, I cultivated the samādhi with perception and examination all day, all night, and all day and night.
