--- a/01_agama/madhyama/MA_078.md
+++ b/01_agama/madhyama/MA_078.md
@@ -104,7 +104,7 @@ next: MA_079.html
 29\. “How is it whatever knowledge and vision I possess, you also know and see that; whatever knowledge and vision I lack, you also know and see yourself; whatever knowledge and vision I and my retinue possess, you also know and see that; and whatever knowledge and vision I and my retinue lack, you also know and see yourself?
 {: #p29}
 
-30\. “Great sage, do you not suffer from a love of words? Asking these questions, I’m not aware of any increase in delusion. What is the reason for that? Because consciousness has a limitless domain, its knowledge is measureless, its vision is measureless, and its types of discernment are measureless. I know each discernment thus: ‘This earth I know is earth … water … fire … air … spirits … gods … Lord Creator … this Brahmā I know is Brahmā.”
+30\. “Great sage, do you not suffer from a love of words? Asking these questions, I’m not aware of any increase in delusion. What is the reason for that? Because consciousness has a limitless domain, its knowledge is measureless, its vision is measureless, and its types of discernment are measureless. I know each discernment thus: ‘This earth I know is earth … water … fire … air … spirits … gods … Lord Creator … this Brahmā I know is Brahmā.’”
 {: #p30}
 
 31\. The Bhagavān then told him, “Brahmā, if ascetics and priests have the notions of earth in earth that ‘earth is self,’ ‘earth belongs to self,’ or ‘self belongs to earth,’ that person supposing earth is self doesn’t know earth. <em>So it is with water, fire, air, spirits, gods, the Lord Creator, Brahmā, Avṛha, and Atapa.</em>[\[5\]](#n5){: #ref5} If they have notions of purity in purity that that ‘purity is self,’ ‘purity belongs to self,’ or ‘self belongs to purity,’ that person supposing that purity is self doesn’t know purity.
