--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -205,7 +205,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 58\. “Good men, it’s like going to a village not far away that has a lofty multi-story temple, and stairs are placed there that have ten or twelve steps. Suppose someone comes wanting to go up to that temple. If he doesn’t climb the stairs by going up the first step, then there’s no way for him to climb to the second step. If he doesn’t climb up to the second step, then there’s no way for him to climb to the third and fourth steps or on up to the temple.
 {: #p58}
 
-59\. “Good men, so it is if there’s a monk who violates the precepts, breaks the precepts, is lacking in the precepts, pierces the precepts, defiles the precepts, and blackens the precepts. Wanting to base himself on the precepts and establish them, he considers the precepts to be stair steps, but there will never be a way for him to ascend to the unsurpassed wisdom hall of the right Dharma temple.
+59\. “Good men, so it is if there’s a monk who violates the precepts, breaks the precepts, is lacking in precepts, pierces the precepts, defiles the precepts, and blackens the precepts. Wanting to base himself on the precepts and establish them, he considers the precepts to be stair steps, but there will never be a way for him to ascend to the unsurpassed wisdom hall of the right Dharma temple.
 {: #p59}
 
 60\. “Good men, suppose there’s a monk who doesn’t violate the precepts, doesn’t break the precepts, isn’t lacking in precepts, doesn’t pierce the precepts, doesn’t defile the precepts, and doesn’t blacken the precepts. Wanting to base himself on the precepts and establish them, he considers the precepts to be stair steps. He’ll surely have a way to ascend to the unsurpassed wisdom hall of the right Dharma temple.
@@ -225,10 +225,10 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 #### Doubts about Aniruddha’s Attainments
 
-65\. “Good men, if anyone doubts that I’ve realized the supernormal abilities and penetrating knowledges, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of the divine ear, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of other minds, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of past lives, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of birth-and-death, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of the end of the contaminants, they should question me, and I will answer them.
+65\. “Good men, if anyone doubts that I’ve realized the supernormal abilities and penetrating knowledges, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of the divine ear, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of other minds, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of past lives, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of birth-and-death, they should question me, and I will answer them. Good men, if anyone doubts that I’ve realized the penetrating knowledge of the end of the contaminants, they should question me, and I will answer them.”
 {: #p65}
 
-66\. “Venerable Ānanda then said, “Venerable Aniruddha, now here on Salaḷa Peak 800 monks and the Bhagavān have gathered to make robes for Venerable Aniruddha. If anyone doubts that Venerable Aniruddha has realized the supernormal abilities and penetrating knowledges, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of the divine ear, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of other minds, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of past lives, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of birth-and-death, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of the end of the contaminants, they should question him, and Venerable Aniruddha will answer them.
+66\. Venerable Ānanda then said, “Venerable Aniruddha, now here on Salaḷa Peak 800 monks and the Bhagavān have gathered to make robes for Venerable Aniruddha. If anyone doubts that Venerable Aniruddha has realized the supernormal abilities and penetrating knowledges, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of the divine ear, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of other minds, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of past lives, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of birth-and-death, they should question him, and Venerable Aniruddha will answer them. If anyone doubts that Venerable Aniruddha has realized the penetrating knowledge of the end of the contaminants, they should question him, and Venerable Aniruddha will answer them.
 {: #p66}
 
 67\. “Only we have been long familiar with Venerable Aniruddha’s mind, just as Venerable Aniruddha possesses great supernormal abilities, great majesty, great fortune, and great might.”
