--- a/01_agama/madhyama/MA_084.md
+++ b/01_agama/madhyama/MA_084.md
@@ -20,13 +20,13 @@ next: MA_085.html
 3\. The Licchavis of Vaiśālī heard that the Bhagavān had traveled to Vaiśālī to stay near the tall pagoda on the bank of the Markaṭa River. They then thought, “We’d better use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’”[\[4\]](#n4){:#ref4}
 {:#p3}
 
-4\. Those famous, elder, and senior great disciples heard those Licchavis of Vaiśālī use great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’ The disciples thought, “Sound is the thorn for meditation. The Bhagavān also says that sound is the thorn for meditation. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.”
+4\. Those famous, elder, and senior great disciples heard those Licchavis of Vaiśālī use great spiritual abilities and the authority of the king to make an announcement: “Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.” The disciples thought, “Sound is the thorn for meditation. The Bhagavān also says that sound is the thorn for meditation. We ought to go to the Gośṛṅga Sal Grove and stay where there aren’t any disturbances. We’ll be secluded and alone there, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.”
 {:#p4}
 
 5\. Thereupon, those famous, elder, and senior great disciples went to Gośṛṅga Sal Grove and stayed where there weren’t any disturbances. They were secluded and alone, staying in a quiet abode in a peaceful place, sitting in repose, and reflecting.
 {:#p5}
 
-6\. It was then that a crowd of Licchavis from Vaiśālī had used great spiritual abilities and the authority of the king to make an announcement: ‘Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.’ Some of the Licchavis bowed their heads at the Buddha’s feet and withdrew to sit at one side. Others exchanged greetings and inquiries with the Buddha and then withdraw to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Others quietly looked at the Buddha from afar and sat down.
+6\. It was then that a crowd of Licchavis from Vaiśālī had used great spiritual abilities and the authority of the king to make an announcement: “Let’s leave Vaiśālī and go to the Bhagavān to offer support and pay homage to him.” Some of the Licchavis bowed their heads at the Buddha’s feet and withdrew to sit at one side. Others exchanged greetings and inquiries with the Buddha and then withdraw to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Others quietly looked at the Buddha from afar and sat down.
 {:#p6}
 
 7\. Once that crowd of Licchavis was seated, they settled down. The Bhagavān taught them Dharma, encouraging, rousing, and making them rejoice. After using measureless methods to teach them Dharma that encouraged, roused, and made them rejoice, he fell silent and waited.
