--- a/01_agama/madhyama/MA_092.md
+++ b/01_agama/madhyama/MA_092.md
@@ -47,7 +47,7 @@ next: MA_095.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a7'>爾時，尊者阿難執拂侍佛。 於是，尊者阿難叉手向佛，白曰： 「世尊，此經當名何？ 云何受持？」</td>
-    <td id='p9'>9. Venerable Ānanda was at the time attending to the Buddha with a fan. He then faced the Buddha with his palms together and said, “Bhagavān, what shall be this <em>sūtra</em> be called? How are we to maintain it?”</td>
+    <td id='p9'>9. Venerable Ānanda was at the time attending to the Buddha with a fan. He then faced the Buddha with his palms together and said, “Bhagavān, what shall this <em>sūtra</em> be called? How are we to maintain it?”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a9'>於是，世尊告曰： 「阿難，此經名為『青白蓮華喻』。 汝當如是善受持誦。」</td>
