--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -135,7 +135,7 @@ next: MA_101.html
 
 #### Mindfulness of Feelings
 
-41\. “What is the mindful abode of observing feelings as feelings? When a monk feels a pleasant feeling, then he knows, ‘I’m feeling a pleasant feeling.’ When he feels a painful feeling, then he knows, ‘I’m feeling a painful feeling.’ When he feels a feeling that’s neither pleasant nor painful, then he knows, ‘I’m feeling a feeling that’s neither pleasant nor painful.’ He experiences a pleasant body … a painful body … a body that’s neither pleasant nor painful … a pleasant mind … a painful mind … a mind that’s neither pleasant nor painful … pleasant food … painful food … food that’s neither pleasant nor painful … pleasant lack of food … painful lack of food … lack of food that’s neither pleasant nor painful … pleasant desires … painful desires … desires that are neither pleasant nor painful. When he experiences a pleasant lack of desire … a painful lack of desire … a lack of desire that’s neither pleasant nor painful, then he knows ‘I’m experiencing a lack of desire that’s neither pleasant nor painful.’
+41\. “What is the mindful abode of observing feelings as feelings? When a monk feels a pleasant feeling, then he knows, ‘I’m feeling a pleasant feeling.’ When he feels a painful feeling, then he knows, ‘I’m feeling a painful feeling.’ When he feels a feeling that’s neither pleasant nor painful, then he knows, ‘I’m feeling a feeling that’s neither pleasant nor painful.’ He experiences a pleasant body … a painful body … a body that’s neither pleasant nor painful … a pleasant mind … a painful mind … a mind that’s neither pleasant nor painful … pleasant food … painful food … food that’s neither pleasant nor painful … pleasant lack of food … painful lack of food … lack of food that’s neither pleasant nor painful … pleasant desires … painful desires … desires that are neither pleasant nor painful. When he experiences a pleasant lack of desire … a painful lack of desire … a lack of desire that’s neither pleasant nor painful, then he knows, ‘I’m experiencing a lack of desire that’s neither pleasant nor painful.’
 {:#p41}
 
 42\. “A monk observes internal feelings as feelings and observes external feelings as feelings in this way. He establishes mindfulness of feeling with knowing, seeing, insight, and comprehension. This is called a monk observing feelings as feelings. If monks and nuns thus observe feelings as feelings little by little, this is called the mindful abode of observing feelings as feelings.
@@ -157,13 +157,13 @@ next: MA_101.html
 46\. “A monk observes internal principles as principles and observes external principles as principles in this way. He establishes mindfulness of principles with knowing, seeing, insight, and comprehension. This is called a monk who observes principles as principles that are the six internal sense-fields.
 {:#p46}
 
-47\. “Furthermore, a monk observes principles as principles. That monk really has internal desire and truly knows, ‘I have desire’ … really has no internal desire and truly knows ‘I have no desire.’ If desires yet to arise do arise, he truly knows it. If desires that have arisen cease and don’t arise again, he truly knows it. Thus … anger … drowsiness … agitation and remorse … really has internal doubt and truly knows, ‘I have doubt’ … really has no doubt and truly knows ‘I have no doubt.’ If doubt yet to arise does arise, he truly knows it. If doubt that has arisen ceases and doesn’t arise again, he truly knows it.
+47\. “Furthermore, a monk observes principles as principles. That monk really has internal desire and truly knows, ‘I have desire’ … really has no internal desire and truly knows, ‘I have no desire.’ If desires yet to arise do arise, he truly knows it. If desires that have arisen cease and don’t arise again, he truly knows it. Thus … anger … drowsiness … agitation and remorse … really has internal doubt and truly knows, ‘I have doubt’ … really has no doubt and truly knows, ‘I have no doubt.’ If doubt yet to arise does arise, he truly knows it. If doubt that has arisen ceases and doesn’t arise again, he truly knows it.
 {:#p47}
 
 48\. “A monk observes internal principles as principles and observes external principles as principles in this way. He establishes mindfulness of principles with knowing, seeing, insight, and comprehension. This is called a monk who observes principles as principles that are the five hindrances.
 {:#p48}
 
-49\. “Furthermore, a monk observes principles as principles. A monk really has the internal awakening factor of mindfulness and truly knows, ‘I have the awakening factor of mindfulness’ … really doesn’t have the awakening factor of mindfulness and truly knows ‘I don’t have the awakening factor of mindfulness.’ If the awakening factor of mindfulness that has yet to arise does arise, he truly knows it. If the awakening factor of mindfulness that has arisen then remains, isn’t lost, and doesn’t fade or retreat, and he develops, cultivates, and increases it, then he truly knows it. Thus … discriminating qualities … effort … joy … calm … samādhi … really has the internal awakening factor of equanimity and truly knows, ‘I have the awakening factor of equanimity’ … really doesn’t have the internal awakening factor of equanimity and truly knows, ‘I don’t have the awakening factor of equanimity.’ If the awakening factor of equanimity that has yet to arise does arise, he truly knows it. If the awakening factor of equanimity that has arisen then remains, isn’t lost, and doesn’t fade or retreat, and he develops, cultivates, and increases it, then he truly knows it.
+49\. “Furthermore, a monk observes principles as principles. A monk really has the internal awakening factor of mindfulness and truly knows, ‘I have the awakening factor of mindfulness’ … really doesn’t have the awakening factor of mindfulness and truly knows, ‘I don’t have the awakening factor of mindfulness.’ If the awakening factor of mindfulness that has yet to arise does arise, he truly knows it. If the awakening factor of mindfulness that has arisen then remains, isn’t lost, and doesn’t fade or retreat, and he develops, cultivates, and increases it, then he truly knows it. Thus … discriminating qualities … effort … joy … calm … <em>samādhi</em> … really has the internal awakening factor of equanimity and truly knows, ‘I have the awakening factor of equanimity’ … really doesn’t have the internal awakening factor of equanimity and truly knows, ‘I don’t have the awakening factor of equanimity.’ If the awakening factor of equanimity that has yet to arise does arise, he truly knows it. If the awakening factor of equanimity that has arisen then remains, isn’t lost, and doesn’t fade or retreat, and he develops, cultivates, and increases it, then he truly knows it.
 {:#p49}
 
 50\. “A monk observes internal principles as principles and observes external principles as principles in this way. He establishes mindfulness of principles with knowing, seeing, insight, and comprehension. This is called a monk who observes principles as principles, which are the seven factors of awakening. If monks and nuns thus observe principles as principles little by little, this is called the mindful abode of observing principles as principles.
