--- a/01_agama/madhyama/MA_106.md
+++ b/01_agama/madhyama/MA_106.md
@@ -18,7 +18,7 @@ next: MA_127.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada’s Park in Jeta’s Grove.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.596b12'>爾時，世尊告諸比丘： 「若有沙門、梵志於地有地想： 『地即是神，地是神所，神是地所。』 彼計地即是神已，便不知地。 如是，水⋯火⋯風⋯神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯ 彼於淨有淨想: 『淨即是神，淨是神所，神是淨所。』 彼計淨即是神已，便不知淨⋯ 無量空處⋯無量識處⋯無所有處⋯非有想非無想處⋯一⋯別⋯若干⋯見⋯聞⋯識⋯知⋯得觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世⋯ 彼於一切有一切想: 『一切即是神，一切是神所，神是一切所。』 彼計一切即是神已，便不知一切。」</td>
+    <td class="ch" title='t125.2.596b12'>爾時，世尊告諸比丘： 「若有沙門、梵志於地有地想： 『地即是神，地是神所，神是地所。』 彼計地即是神已，便不知地。 如是，水⋯火⋯風⋯神⋯天⋯生主⋯梵天⋯無煩⋯無熱⋯ 彼於淨有淨想: 『淨即是神，淨是神所，神是淨所。』 彼計淨即是神已，便不知淨⋯ 無量空處⋯無量識處⋯無所有處⋯非有想非無想處⋯一⋯別⋯若干⋯見⋯聞⋯識⋯知⋯得觀⋯意所念⋯意所思⋯從此世至彼世⋯從彼世至此世⋯ 彼於一切有一切想: 『一切即是神，一切是神所，神是一切所。』 彼計一切即是神已，便不知一切。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Suppose an ascetic or priest conceives about earth that there is earth: ‘Earth is the soul, earth belongs to the soul, or the soul belongs to earth.’ Having supposed that earth is the soul, they do not know earth. So it is with water … fire … air … spirits … gods … Prajāpati … Brahmā … Avṛha … Atapa … They conceive about purity that there is purity: ‘Purity is the soul, purity belongs to the soul, or the soul belongs to purity.’ Having supposed that purity is the soul, they do not know purity … the abode of measureless space … abode of measureless awareness … abode of nothingness … abode neither with nor without conception … oneness … distinction … diversity … what’s seen … heard … discerned … known … found … investigated … mental thought … mental intention … from this world to that world … from that world to this world … They conceive about everything that there is everything. ‘Everything is the soul, everything belongs to the soul, or the soul belongs to everything.’ Having supposed that everything is the soul, they don’t know everything.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
