--- a/01_agama/madhyama/MA_140.md
+++ b/01_agama/madhyama/MA_140.md
@@ -57,7 +57,7 @@ next: MA_146.html
 </tr>
 <tr>
   <td class="ch" title='t26.1.647b13'><ul class='verse'>
-    <li>「猶如無事處，<br/>
+    <li>猶如無事處，<br/>
     燒人殘火燼，<br/>
     無事村不用。<br/>
     人著欲亦然：<br/>
