--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -116,7 +116,7 @@ He answered, “No, Gautama.”
 27\. “Sugandika, would this god or son of a god rather abandon the five heavenly merits of desire? Would he rejoice when remembering his enjoyment of human desires?”
 {:#p27}
 
-28\. “He answered, “No, Gautama. Why would that be? Human desires are a foul place that’s impure. It would be detestable, unapproachable, horrible, and very painful to his mind. Gautama, the desires in heaven are so much higher, more marvelous and superior, than human desires. It would never happen that this god or son of a god would abandon the five merits of desire up in heaven or rejoice when remembering his enjoyment of human desires.”
+28\. He answered, “No, Gautama. Why would that be? Human desires are a foul place that’s impure. It would be detestable, unapproachable, horrible, and very painful to his mind. Gautama, the desires in heaven are so much higher, more marvelous and superior, than human desires. It would never happen that this god or son of a god would abandon the five merits of desire up in heaven or rejoice when remembering his enjoyment of human desires.”
 {:#p28}
 
 29\. “So it is, Sugandika. I ended human desires and went beyond the desires in heaven. I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, trouble, and escape of the five merits of desire, I lived with an inner calm.
