--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -73,20 +73,20 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 
 #### Training Under Ārāḍa Kālāma
 
-17\. “When I was a young man, I had pure blue-black hair and flourished from year to year until I was 29. That period was my happiest and most fun. I was handsome, decked out, and traveled about. Back then, my father and mother cried and my friends were unhappy when I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. I guarded myself physically and my livelihood was pure. I guarded my words and thoughts, and my livelihood was pure.
+17\. “When I was a young man, I had pure blue-black hair and flourished from year to year until I was 29. That period was my happiest and most fun. I was handsome, decked out, and traveled about. Back then, my father and mother cried and my friends were unhappy when I shaved off my hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. I guarded myself physically and my livelihood was pure. I guarded my words and thoughts, and my livelihood was pure.
 {:#p17}
 
-18\. After I had accomplished this body of precepts, I wanted to pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, lacks death, grief and sorrow, and defilement. I therefore went to Ārāḍa Kālāma and asked him, “Ārāḍa, I want to practice the religious life under you. May I do so?”
+18\. “After I had accomplished this body of precepts, I wanted to pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, lacks death, grief and sorrow, and defilement. I therefore went to Ārāḍa Kālāma and asked him, ‘Ārāḍa, I want to practice the religious life under you. May I do so?’
 {:#p18}
 
-Ārāḍa replied to me, “Good man, there’s no reason for me not to allow it. If you want to practice, then practice.”
+“Ārāḍa replied to me, ‘Good man, there’s no reason for me not to allow it. If you want to practice, then practice.’
 
-19\. Again, I asked, “Ārāḍa, how did you yourself know, perceive, and realize this teaching?”
+19\. “Again, I asked, ‘Ārāḍa, how did you yourself know, perceive, and realize this teaching?’
 {:#p19}
 
-Ārāḍa answered, “Good man, I transcended the abode of all consciousness and accomplished and dwelt in the abode of nothingness. This was how I myself knew, perceived, and realized this teaching.”
+“Ārāḍa answered, ‘Good man, I transcended the abode of all consciousness and accomplished and dwelt in the abode of nothingness. This was how I myself knew, perceived, and realized this teaching.’
 
-20\. “Again, I had the thought, “It’s not just Ārāḍa alone who has this faith; I also have this faith. It’s not just Ārāḍa alone who has this effort; I also have this effort. It’s not just Ārāḍa alone who has this wisdom; I also have this wisdom. Ārāḍa himself knows, is perceived, and has realized this teaching.” I then went alone into seclusion because I wanted to realize this teaching in an empty and peaceful abode. My mind lacking carelessness, I cultivated diligently. After going alone into seclusion in an empty and quiet place, lacking carelessness, and cultivating diligently, it was not long before I attained realization of that teaching.
+20\. “Again, I had the thought, ‘It’s not just Ārāḍa alone who has this faith; I also have this faith. It’s not just Ārāḍa alone who has this effort; I also have this effort. It’s not just Ārāḍa alone who has this wisdom; I also have this wisdom. Ārāḍa himself knows, is perceived, and has realized this teaching.’ I then went alone into seclusion because I wanted to realize this teaching in an empty and peaceful abode. My mind lacking carelessness, I cultivated diligently. After going alone into seclusion in an empty and quiet place, lacking carelessness, and cultivating diligently, it was not long before I attained realization of that teaching.
 {:#p20}
 
 21\. “After realizing that teaching, I again went to Ārāḍa Kālāma and asked him, ‘Ārāḍa, does this teaching that I’ve myself known, perceived, and realized transcend the abode of all measureless consciousness and accomplish the abode of nothingness?’
@@ -122,7 +122,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 29\. “After realizing that teaching, I again went to Udraka Rāmaputra and asked him, ‘Udraka, is this the teaching that you Rāmaputra have known, perceived, and realized that transcends the abode of all nothingness and accomplishes the abode with neither conception nor no conception?’
 {:#p29}
 
-“Udraka Rāmaputra replied to me, ‘Good man, this is the teaching that I Rāmaputra have known, perceived, and realized that transcends the abode of all nothingness and accomplishes the abode with neither conception nor no conception.”
+“Udraka Rāmaputra replied to me, ‘Good man, this is the teaching that I Rāmaputra have known, perceived, and realized that transcends the abode of all nothingness and accomplishes the abode with neither conception nor no conception.’
 
 30\. “Udraka also said to me, ‘Just as I Rāmaputra have realized this teaching, you have done so, too. Just as you have realized this teaching, I have done so, too. Come, good man, and lead this assembly together with me.’
 {:#p30}
@@ -181,10 +181,10 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 Not attached to any teaching.\\
 All craving ended and being liberated,\\
 Who would the self-awakened call “teacher”?
-* {:.verse} “‘Unequalled and without a superior,\\
+* {:.verse} Unequalled and without a superior,\\
 Self-awakening is the unsurpassed awakening.\\
 The Tathāgata is the teacher of gods and humans,\\
-Complete in knowledge and accomplished of powers.
+Complete in knowledge and accomplished in powers.’
 
 45\. “[Upaka] asked me, ‘Good man, Gautama, you call yourself supreme?’
 {:#p45}
@@ -216,7 +216,7 @@ That’s never been turned in the world before.’
 49\. “When I went to those five monks, they didn’t treat me as being wonderful or dignified. Some rose from their seats with their bowls and robes, some prepared seats, some brought water, or some went to wash their feet. I then thought, ‘These are foolish people. How can they be so unreliable? They stand and arrange things freely, and then they go back to where they were!’ After I recognized that, I sat on the seat that the five monks had prepared.
 {:#p49}
 
-50\. “Then the five monks called me by my clan and ‘friend.’  I said to them, ‘Five monks, I am a Tathāgata, Arhat, and Rightly and Completely Enlightened One. Don’t call me by my original clan, and don’t call me ‘friend.’ Why is that? I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without illness and attained the unsurpassed safety of <em>nirvāṇa</em> that’s without illness. I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement, and I attained the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement. I produced knowing, seeing, and certainty about the factors of the path. I truly knew: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’
+50\. “Then the five monks called me by my clan and ‘friend.’  I said to them, ‘Five monks, I am a Tathāgata, Arhat, and Rightly and Completely Enlightened One. Don’t call me by my original clan, and don’t call me “friend.” Why is that? I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without illness and attained the unsurpassed safety of <em>nirvāṇa</em> that’s without illness. I sought the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement, and I attained the unsurpassed safety of <em>nirvāṇa</em> that’s without old age … death … grief and sorrow … defilement. I produced knowing, seeing, and certainty about the factors of the path. I truly knew: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.”’
 {:#p50}
 
 “They said to me, ‘Friend, Gautama. Before, you had such a practice, such a path, and such an asceticism, but you weren’t able to attain the higher state of a human or the distinctly noble knowing and seeing. How could do that today having many desires, many pursuits, eating delicious meals of good rice, barley, milk, and honey, and rubbing your body with sesame oil?’
@@ -250,30 +250,30 @@ That’s never been turned in the world before.’
 59\. “‘Five monks, the well-versed noble disciple meets good friends, knows the noble teaching, and also steers by the noble teaching. They don’t contact these five desires, and they aren’t defiled, aren’t greedy, and aren’t attached to them. They aren’t conceited and don’t accept and enter them, either. They see the danger and the escape when taking and making use [of these things].
 {:#p59}
 
-60\. “You should know that they don’t follow corrupt Māra and don’t themselves make Māra’s. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, or caught by Māra’s trap. They then are freed from Māra’s trap.
+60\. “‘You should know that they don’t follow corrupt Māra and don’t themselves make Māra’s. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, or caught by Māra’s trap. They then are freed from Māra’s trap.
 {:#p60}
 
-61\. “Five monks, they are like the wild deer that gets free of a trap. You should know that it doesn’t follow the hunter and won’t itself make the hunter. The deer won’t fall into the hunter’s hands or get entangled in the hunter’s net, so when the hunter comes it’ll be able to get free. So it is, five monks. The well-versed noble disciple meets good friends, knows the noble teaching, and then they are steered by the noble teaching. They don’t come into contact with these five desires, aren’t defiled, aren’t greedy, and aren’t attached to them. They aren’t conceited and don’t accept or enter them. They see the danger and the escape when taking and making use [of these things]. You should know that they don’t follow corrupt Māra and don’t themselves make Māra. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, and aren’t caught by Māra’s trap. They are freed from Māra’s trap.
+61\. “‘Five monks, they are like the wild deer that gets free of a trap. You should know that it doesn’t follow the hunter and won’t itself make the hunter. The deer won’t fall into the hunter’s hands or get entangled in the hunter’s net, so when the hunter comes it’ll be able to get free. So it is, five monks. The well-versed noble disciple meets good friends, knows the noble teaching, and then they are steered by the noble teaching. They don’t come into contact with these five desires, aren’t defiled, aren’t greedy, and aren’t attached to them. They aren’t conceited and don’t accept or enter them. They see the danger and the escape when taking and making use [of these things]. You should know that they don’t follow corrupt Māra and don’t themselves make Māra. Noble disciples don’t fall into Māra’s hands, get entangled in Māra’s net, and aren’t caught by Māra’s trap. They are freed from Māra’s trap.
 {:#p61}
 
-62\. “Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He’s secluded from desires and secluded from bad and unskillful things … he accomplishes and dwells in the fourth meditation. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
+62\. “‘Five monks, when a Tathāgata arises in the world who is an Arhat, Rightly and Completely Enlightened One and who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and who’s called the Buddha, the Blessed One, he ends … the five hindrances, mental defilement, and weakness of wisdom. He’s secluded from desires and secluded from bad and unskillful things … he accomplishes and dwells in the fourth meditation. Thus, his concentrated mind is pure, without defilement, and without disturbance. It’s flexible and well-abiding, and he attains an imperturbable mental state. He cultivates the end of contaminants and realizes the penetrating knowledges.
 {:#p62}
 
-63\. “He knows as it really is, ‘This is suffering.’ He knows as it really is, ‘This is suffering’s accumulation.’ He knows as it really is, ‘This is the suffering’s cessation.’ He knows as it really is, ‘This is the path to suffering’s cessation.’ He knows as it really is, ‘These are contaminants.’ He knows, ‘This is the accumulation of contaminants.’ He knows, ‘This is the cessation of contaminants.’ He knows, ‘This is the path to the cessation of contaminants.’ He thus knows and thus sees liberation from the mind’s contaminants of desire and liberation from the mind’s contaminants of existence and ignorance.
+63\. “‘He knows as it really is, “This is suffering.” He knows as it really is, “This is suffering’s accumulation.” He knows as it really is, “This is the suffering’s cessation.” He knows as it really is, “This is the path to suffering’s cessation.” He knows as it really is, “These are contaminants.” He knows, “This is the accumulation of contaminants.” He knows, “This is the cessation of contaminants.” He knows, “This is the path to the cessation of contaminants.” He thus knows and thus sees liberation from the mind’s contaminants of desire and liberation from the mind’s contaminants of existence and ignorance.
 {:#p63}
 
-64\. “Once he’s liberated, then he knows his liberation. He truly knows: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ At that point, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes. Why is that? He has seen it for himself that bad and unwholesome things are ended; therefore, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes.
+64\. “‘Once he’s liberated, then he knows his liberation. He truly knows: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.” At that point, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes. Why is that? He has seen it for himself that bad and unwholesome things are ended; therefore, he can practice as he likes, abide as he likes, sit as he likes, and lie down as he likes.
 {:#p64}
 
-65\. “Five monks, it’s like a place where there’s no business and no people. A wild deer that’s there goes where it likes, abides as it likes, shelters as it likes, and lies down as it likes. Why is that? That wild deer doesn’t live in the domain of hunters; therefore, it goes as it likes, abides as it likes, shelters as it likes, and lies down as it likes.
+65\. “‘Five monks, it’s like a place where there’s no business and no people. A wild deer that’s there goes where it likes, abides as it likes, shelters as it likes, and lies down as it likes. Why is that? That wild deer doesn’t live in the domain of hunters; therefore, it goes as it likes, abides as it likes, shelters as it likes, and lies down as it likes.
 {:#p65}
 
-66\. “Thus, five monks, a monk who ends the contaminants becomes uncontaminated. Their mind is liberated, and their wisdom is liberated. They accomplish and dwell in their own knowledge, awakening, and direct experience. They truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
+66\. “‘Thus, five monks, a monk who ends the contaminants becomes uncontaminated. Their mind is liberated, and their wisdom is liberated. They accomplish and dwell in their own knowledge, awakening, and direct experience. They truly know: “Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.” At that point, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes. Why is that? He sees for himself that measureless bad and unwholesome things are ended; therefore, he practices as he likes, abides as he likes, sits as he likes, and lies down as he likes.
 {:#p66}
 
 
 
-67\. “Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without illness. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement.”
+67\. “‘Five monks, this is the teaching of liberation without remainder. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without illness. This is the teaching of the unsurpassed safety of <em>nirvāṇa</em> without old age … death … grief and sorrow … defilement.’”
 {:#p67}
 
 68\. This is what the Buddha said. Venerable Ānanda and the monks who heard what he taught rejoiced and approved.
