--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -95,7 +95,7 @@ next: MA_075.html
 26\. “How does the path come from wisdom and isn’t obtained from foolishness? A monk cultivates wisdom. He contemplates the law of arising and decay and attains the noble wisdom and insight that accords with this knowledge. He discerns and comprehends it in order to correctly end suffering. This is how the path comes from wisdom and isn’t obtained from foolishness.
 {: #p26}
 
-27\. “How does the path come from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity? A monk’s mind always ceases frivolity and happily dwells in nirvāṇa without remainder. His mind forever lives happily, rejoices, and is mentally freed. This is how the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity.
+27\. “How does the path come from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity? A monk’s mind always ceases frivolity and happily dwells in <em>nirvāṇa</em> without remainder. His mind forever lives happily, rejoices, and is mentally freed. This is how the path comes from non-frivolity, enjoying non-frivolity, and practicing non-frivolity and isn’t obtained by frivolity, enjoying frivolity, or practicing frivolity.
 {: #p27}
 
 #### Aniruddha
@@ -106,7 +106,7 @@ next: MA_075.html
 29\. “Only when the unsurpassed religious practice is finished will he accomplish and dwell in their own knowledge, awakening, and direct experience. He’ll truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’”
 {: #p29}
 
-30\. At that moment, Venerable Aniruddha became an arhat. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses,
+30\. At that moment, Venerable Aniruddha became an <em>arhat</em>. His mind rightly liberated, he became an elder and honored one. It was then that he spoke these verses:
 {: #p30}
 
 * {:.verse #v1} “Knowing my thoughts of reflection from afar,  
@@ -116,7 +116,7 @@ And came here instantly by levitation.
 
 * {:.verse #v2} What had been thought in my mind  
 He stated and added another to it:  
-The buddhas’ enjoyment of non-frivolity  
+The <em>buddha</em>s’ enjoyment of non-frivolity  
 And seclusion from all frivolity.
 
 * {:.verse #v3} Once I knew the Dharma that came from him,  
@@ -132,7 +132,7 @@ Established in right mindfulness and right knowledge.
 * {:.verse #v5} At [Vyālī] Bamboo Grove,  
 My life will reach its end there.  
 It’ll be under the bamboo trees,  
-That parinirvāṇa without remainder.”
+That <em>parinirvāṇa</em> without remainder.”
 
 31\. The Buddha thus spoke. Venerable Aniruddha and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p31}
