--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -61,7 +61,7 @@ Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” A
 10\. Again, she asked, “Noble one, what is the noble eightfold path?”
 {:#p10}
 
-The nun Dharmadinnā answered, “The noble eightfold path is right view … right samādhi. These eight things are called the noble eightfold path.”
+The nun Dharmadinnā answered, “The noble eightfold path is right view … right <em>samādhi</em>. These eight things are called the noble eightfold path.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
@@ -75,14 +75,14 @@ Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” A
 12\. Again, she asked, “Noble one, how many categories does it have?”
 {:#p12}
 
-The nun Dharmadinnā answered, “It has three categories: The category of precepts, category of samādhi, and category of wisdom.”
+The nun Dharmadinnā answered, “It has three categories: The category of precepts, category of <em>samādhi</em>, and category of wisdom.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
 13\. Again, she asked, “Noble one, does the noble eightfold path include these three categories, or do these three categories include the noble eightfold path?”
 {:#p13}
 
-The nun Dharmadinnā answered, “It’s not the noble eightfold path that includes these three categories. These three categories include the noble eightfold path. Right speech, right action, and right livelihood are the three factors of the path that are included in the category of precepts. Right mindfulness and right samādhi are the two factors of the path that are included in the category of samādhi. Right view, right intention, and right method are the three factors of the path that are included in the category of wisdom.[\[5\]](#n5){: #ref5} This is how it’s not the noble eightfold path that includes the three categories but the three categories that include the noble eightfold path.”
+The nun Dharmadinnā answered, “It’s not the noble eightfold path that includes these three categories. These three categories include the noble eightfold path. Right speech, right action, and right livelihood are the three factors of the path that are included in the category of precepts. Right mindfulness and right <em>samādhi</em> are the two factors of the path that are included in the category of <em>samādhi</em>. Right view, right intention, and right method are the three factors of the path that are included in the category of wisdom.[\[5\]](#n5){: #ref5} This is how it’s not the noble eightfold path that includes the three categories but the three categories that include the noble eightfold path.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
@@ -100,10 +100,10 @@ The nun Dharmadinnā answered, “The first meditation has five factors: Noticin
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-16\. Again, she asked, “Noble one, what is samādhi? What are samādhi’s attributes? What are samādhi’s powers? What are samādhi’s rewards? How is samādhi cultivated?”
+16\. Again, she asked, “Noble one, what is <em>samādhi</em>? What are <em>samādhi</em>’s attributes? What are <em>samādhi</em>’s powers? What are <em>samādhi</em>’s rewards? How is <em>samādhi</em> cultivated?”
 {:#p16}
 
-The nun Dharmadinnā answered, “If a good mind becomes unified, this is said to be samādhi. The four abodes of mindfulness are called the attributes of samādhi. The four right abandonments are called samādhi’s powers. The four miraculous abilities are called samādhi’s rewards. If someone trains while clothed in these good things and frequently cultivates them with diligence, that’s called cultivating samādhi.”
+The nun Dharmadinnā answered, “If a good mind becomes unified, this is said to be <em>samādhi</em>. The four abodes of mindfulness are called the attributes of <em>samādhi</em>. The four right abandonments are called <em>samādhi</em>’s powers. The four miraculous abilities are called <em>samādhi</em>’s rewards. If someone trains while clothed in these good things and frequently cultivates them with diligence, that’s called cultivating <em>samādhi</em>.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
@@ -114,45 +114,45 @@ The nun Dharmadinnā answered, “There are three things that arise after the bo
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-18\. Again, she asked, “Noble one, what’s the difference between death and entering the samādhi of complete cessation?”
+18\. Again, she asked, “Noble one, what’s the difference between death and entering the <em>samādhi</em> of complete cessation?”
 {:#p18}
 
-The nun Dharmadinnā answered, “Death extinguishes one’s life. Once warmth has left the body, one’s faculties disintegrate. When a monk enters the samādhi of complete cessation, his life isn’t extinguished. Heat doesn’t leave his body, and his faculties don’t disintegrate. This is called the difference between death and entering the samādhi of complete cessation.”
+The nun Dharmadinnā answered, “Death extinguishes one’s life. Once warmth has left the body, one’s faculties disintegrate. When a monk enters the <em>samādhi</em> of complete cessation, his life isn’t extinguished. Heat doesn’t leave his body, and his faculties don’t disintegrate. This is called the difference between death and entering the <em>samādhi</em> of complete cessation.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-19\. Again, she asked, “Noble one, what’s the difference between entering the samādhi of complete cessation and the samādhi of no conception?”
+19\. Again, she asked, “Noble one, what’s the difference between entering the <em>samādhi</em> of complete cessation and the <em>samādhi</em> of no conception?”
 {:#p19}
 
-The nun Dharmadinnā answered, “A monk who enters the samādhi of complete cessation has ceased conception and perception. When he enters the samādhi of no conception, conception and perception don’t cease. This is called the difference between entering the samādhi of complete cessation and samādhi of no conception.
+The nun Dharmadinnā answered, “A monk who enters the <em>samādhi</em> of complete cessation has ceased conception and perception. When he enters the <em>samādhi</em> of no conception, conception and perception don’t cease. This is called the difference between entering the <em>samādhi</em> of complete cessation and <em>samādhi</em> of no conception.
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-20\. Again, she asked, “Noble one, what’s the difference between emerging from the samādhi of complete cessation and from the samādhi of no conception?”
+20\. Again, she asked, “Noble one, what’s the difference between emerging from the <em>samādhi</em> of complete cessation and from the <em>samādhi</em> of no conception?”
 {:#p20}
 
-The nun Dharmadinnā answered, “When he emerges from the samādhi of complete cessation, a monk doesn’t think, ‘I’m emerging from the samādhi of complete cessation.’ When he emerges from the samādhi of no conception, he thinks, ‘Do I have conception, or do I have no conception?’ This is called the difference between emerging from the samādhi of complete cessation and the samādhi of no conception.”
+The nun Dharmadinnā answered, “When he emerges from the <em>samādhi</em> of complete cessation, a monk doesn’t think, ‘I’m emerging from the <em>samādhi</em> of complete cessation.’ When he emerges from the <em>samādhi</em> of no conception, he thinks, ‘Do I have conception, or do I have no conception?’ This is called the difference between emerging from the <em>samādhi</em> of complete cessation and the <em>samādhi</em> of no conception.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-21\. Again, she asked, “Noble one, when a monk enters the samādhi of complete cessation, does he think this, ‘I’m entering the samādhi of complete cessation’?”
+21\. Again, she asked, “Noble one, when a monk enters the <em>samādhi</em> of complete cessation, does he think this, ‘I’m entering the <em>samādhi</em> of complete cessation’?”
 {:#p21}
 
-The nun Dharmadinnā answered, “When a monk enters the samādhi of complete cessation, he doesn’t think, ‘I’m entering the samādhi of complete cessation.’ He heads towards it because of his past cultivation of mind.”
+The nun Dharmadinnā answered, “When a monk enters the <em>samādhi</em> of complete cessation, he doesn’t think, ‘I’m entering the <em>samādhi</em> of complete cessation.’ He heads towards it because of his past cultivation of mind.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-22\. Again, she asked, “Noble one, when a monk emerges from the samādhi of complete cessation, does he think, ‘I’m emerging from the samādhi of complete cessation’?”
+22\. Again, she asked, “Noble one, when a monk emerges from the <em>samādhi</em> of complete cessation, does he think, ‘I’m emerging from the <em>samādhi</em> of complete cessation’?”
 {:#p22}
 
-The nun Dharmadinnā answered, “When a monk emerges from the samādhi of complete cessation, he doesn’t think, ‘I’m emerging from the samādhi of complete cessation.’ His emergence from that samādhi is caused by his body and the six sense fields, and it’s conditioned by his life faculty.”
+The nun Dharmadinnā answered, “When a monk emerges from the <em>samādhi</em> of complete cessation, he doesn’t think, ‘I’m emerging from the <em>samādhi</em> of complete cessation.’ His emergence from that <em>samādhi</em> is caused by his body and the six sense fields, and it’s conditioned by his life faculty.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
-23\. Again, she asked, “Noble one, what delights, inclinations, and agrees with a monk’s mind have after he emerges from the samādhi of complete cessation?”
+23\. Again, she asked, “Noble one, what delights, inclinations, and agrees with a monk’s mind have after he emerges from the <em>samādhi</em> of complete cessation?”
 {:#p23}
 
-The nun Dharmadinnā answered, “After a monk emerges from the samādhi of complete cessation, his mind delights in seclusion, inclines toward seclusion, and agrees with seclusion.”
+The nun Dharmadinnā answered, “After a monk emerges from the <em>samādhi</em> of complete cessation, his mind delights in seclusion, inclines toward seclusion, and agrees with seclusion.”
 
 Hearing this, the laywoman Viśākhā praised it, “Good, Noble one! Good!” After praising her, the laywoman Viśākhā rejoiced and approved.
 
@@ -263,7 +263,7 @@ The nun Dharmadinnā answered, “Madam, you’re asking about an endless subjec
 2. {:#n2} <em>laywoman Viśākhā</em>. Some sources, such as MN 44 and the later <cite>Mahāvibhāṣā</cite> translation by Xuanzang, have a man named Viśākha as Dharmadinnā’s interlocutor, but there are also sources that agree with this version. Some sources say the laywoman Viśākhā had a husband named Viśākha, and others say it was Dharmadinnā who had a husband (or nearly married a man) by this name. These backstories appear to have become a bit confused over time, though they all agree on Viśākha as the name of the interlocutor (just not on the name’s gender). [\[back\]](#ref2)
 3. {:#n3} <em>oneself</em>. C. <span class="ch">自身</span>, S. <em>svakāya</em>, P. <em>sakkāya</em>. A literal reading of the Chinese might be ‘own body,’ but as we shall see, it’s defined as equivalent to a person or individual that includes all five aggregates. [\[back\]](#ref3)
 4. {:#n4} <em>proliferating aggregates</em>. C. <span class="ch">盛陰</span>, P. <em>upādāna-khandha</em>. <span class="ch">盛</span> was an early translation of <em>upādāna</em> in the expression P. <em>upādāna-khandha</em>. In normal contexts, <span class="ch">盛</span> has positive meanings like “flourishing, prosperous, waxing.” I take it here to mean something that multiplies or accumulates. [\[back\]](#ref4)
-5. {:#n5} <em>right method</em>. C. <span class="ch">正方便</span>, P. <em>samma-padhāna</em>. This term and right abandonment (<em>samyak-prahāṇa</em>) below are different names for the same practice called right effort in Pali sources. Note that right effort is placed in the category of samādhi in MN 44 rather than in the category of wisdom here.[\[back\]](#ref5)
+5. {:#n5} <em>right method</em>. C. <span class="ch">正方便</span>, P. <em>samma-padhāna</em>. This term and right abandonment (<em>samyak-prahāṇa</em>) below are different names for the same practice called right effort in Pali sources. Note that right effort is placed in the category of <em>samādhi</em> in MN 44 rather than in the category of wisdom here.[\[back\]](#ref5)
 
 ---
 
